1.created h1 selector and assigned property 'margin with values '0 auto 16px'|2.corrected spacing

--- a/style.css
+++ b/style.css
@@ -13,15 +13,17 @@ body{
 
   color: #828282;
 }
-
 /* Propriedades do Seletor Main */
 main {
   width: 626px;
   margin: 64px auto;
     
 }
-
 /* Propriedades do Seletor Figure */
 figure{
   margin: 0 auto 32px;
+}
+/* Propriedades do Seletor h1 */
+h1{
+  margin: 0 auto 16px;
 }
